# ruley

./: .coderabbit.yml  .gitattributes  .gitignore  .mdformat.toml  .mergify.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_SPEC.md  README.md  RELEASING.md  SECURITY.md  cliff.toml  clippy.toml  deny.toml  dist-workspace.toml  justfile  mise.ci.toml  mise.toml  release-plz.toml
.cargo/: audit.toml
.claude/: settings.local.json
.cursor/commands/: ci_check.md  code_rabbit.md  code_review.md  performance_tuning.md  security_hardening.md  update_llmstxt.md
.cursor/rules/: README.md
.cursor/rules/deployment/: cli-design.mdc  performance-standards.mdc
.cursor/rules/github-actions/: github-actions-deployment.mdc  github-actions-performance.mdc  github-actions-security.mdc  github-actions-structure.mdc  github-actions-testing.mdc  github-actions-troubleshooting.mdc
.cursor/rules/project/: documentation-standards.mdc  justfile-standards.mdc  workspace-structure.mdc
.cursor/rules/rust/: async-patterns.mdc  cargo-toml.mdc  configuration-management.mdc  database-operations.mdc  error-handling-patterns.mdc  error-handling.mdc  linting-rules.mdc  performance-optimization.mdc  rust-standards.mdc
.cursor/rules/security/: enterprise-features.mdc  security-standards.mdc
.cursor/rules/testing/: testing-standards.mdc
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  commit-instructions.md  dependabot.yml  issue_template.md  pull_request_template.md
.github/prompts/: ci_check.prompt.md  simplicity-checker.prompt.md
.github/workflows/: audit.yml  ci.yml  codeql.yml  copilot-setup-steps.yml  docs.yml  release-plz.yml  release.yml  scorecard.yml  security.yml
.serena/: project.yml
Epic/specs/: Core_Flows__ruley_User_Journeys.md  Epic_Brief__ruley_v1.0.0_-_Automated_AI_IDE_Rules_Generation.md  Technical_Plan__ruley_v1.0.0_Architecture.md
Epic/tickets/: Caching_and_State_Management__Temp_Files,_State_Persistence,_and_Cleanup.md  Foundation__CLI,_Configuration,_and_Pipeline_Orchestration.md  Input_Processing__File_Scanning,_Compression,_and_Repomix_Support.md  LLM_Integration__Provider_Abstraction,_Chunking,_and_Retry_Logic.md  Output_Handling__Formatters,_File_Writing,_and_Conflict_Resolution.md  Rule_Generation__Prompts,_Parsing,_and_Format_Refinement.md  Testing,_Documentation,_and_CI_CD.md  UX_Polish__Progress_Bars,_Cost_Estimation,_and_Error_Messages.md
benches/: benchmark.rs
docs/: book.toml  mermaid-init.js
docs/plans/: 2026-01-10-ruley-completion.md  issue-7-caching-state-management.md
docs/specs/: issue-14-ux-polish.md
docs/src/: SUMMARY.md  architecture.md  cli.md  compression.md  configuration.md  development.md  installation.md  introduction.md  output-formats.md  pipeline.md  providers.md  quickstart.md  release-process.md  release-verification.md  security-assurance.md  security.md  testing.md
examples/: basic_usage.rs  custom_provider.rs
prompts/: aider.md  base.md  claude.md  copilot.md  cursor.md  generic.md  smart_merge.md  windsurf.md
src/: lib.rs  main.rs
src/cli/: args.rs  config.rs  mod.rs
src/generator/: mod.rs  prompts.rs  refinement.rs  rules.rs
src/llm/: analysis.rs  chunker.rs  client.rs  cost.rs  mod.rs  provider.rs  tokenizer.rs
src/llm/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs
src/output/: aider.rs  claude.rs  copilot.rs  cursor.rs  generic.rs  json.rs  mod.rs  windsurf.rs  writer.rs
src/packer/: compress.rs  git.rs  gitignore.rs  mod.rs  output.rs  repomix.rs  walker.rs
src/utils/: cache.rs  cost_display.rs  dry_run.rs  error.rs  finalization.rs  formatting.rs  mod.rs  progress.rs  state.rs  summary.rs  validation.rs
tests/: cache_integration_test.rs  compression_test.rs  conflict_test.rs  finalization_test.rs  integration_test.rs  provider_test.rs  refinement_test.rs  repomix_test.rs  validation_test.rs
tests/common/: mod.rs
