[package]
name = "ruley"
version = "0.1.0"
edition = "2024"
authors = ["UncleSp1d3r <unclesp1d3r@evilbitlabs.io>"]
license = "Apache-2.0"
description = "Make your codebase ruley - generate AI IDE rules from codebases"
repository = "https://github.com/EvilBit-Labs/ruley"
homepage = "https://github.com/EvilBit-Labs/ruley"
keywords = ["ai", "llm", "cursor", "claude", "copilot", "ide", "rules"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = ["anthropic", "openai", "compression-typescript"]

# LLM Providers
anthropic = []
openai = []
ollama = []
openrouter = []
xai = []
groq = []
gemini = []
all-providers = [
    "anthropic",
    "openai",
    "ollama",
    "openrouter",
    "xai",
    "groq",
    "gemini",
]

# Compression languages
compression-typescript = ["tree-sitter-typescript"]
compression-python = ["tree-sitter-python"]
compression-rust = ["tree-sitter-rust"]
compression-go = ["tree-sitter-go"]
compression-all = [
    "compression-typescript",
    "compression-python",
    "compression-rust",
    "compression-go",
]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = "0.4.42"
# CLI
clap = { version = "4.5.54", features = ["derive", "env"] }
console = "0.16.2"
futures = "0.3.31"

# Git operations
git2 = "0.20.3"
globset = "0.4.18"

# File matching
ignore = "0.4.25"

# Progress display
indicatif = "0.18.3"

# Misc
once_cell = "1.21.3"
regex = "1.12.2"

# LLM providers (feature-gated)
# Alternative: individual provider SDKs
reqwest = { version = "0.13.1", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Error handling
thiserror = "2.0.17"

# Token counting
tiktoken-rs = "0.9.1"

# Async runtime
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.8"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Tree-sitter (feature-gated per language)
tree-sitter = "0.26.3"
tree-sitter-go = { version = "0.25.0", optional = true }
tree-sitter-python = { version = "0.25.0", optional = true }
tree-sitter-rust = { version = "0.24.0", optional = true }
tree-sitter-typescript = { version = "0.23.2", optional = true }

[dev-dependencies]
git-cliff = "2.11.0"
typos = "0.10.39"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
