[package]
name         = "ruley"
version      = "1.0.0"
edition      = "2024"
authors      = ["UncleSp1d3r <unclesp1d3r@evilbitlabs.io>"]
license      = "Apache-2.0"
description  = "Make your codebase ruley - generate AI IDE rules from codebases"
repository   = "https://github.com/EvilBit-Labs/ruley"
homepage     = "https://github.com/EvilBit-Labs/ruley"
keywords     = ["ai", "llm", "cursor", "claude", "copilot", "ide", "rules"]
categories   = ["command-line-utilities", "development-tools"]
rust-version = "1.85"

[workspace.lints.clippy]
# Pedantic clippy configuration with proper priorities
correctness = { level = "deny", priority = -1 }
suspicious  = { level = "warn", priority = -1 }
pedantic    = { level = "warn", priority = -1 }
nursery     = { level = "warn", priority = -1 }
cargo       = { level = "warn", priority = -1 }

# Security-focused linting
as_conversions = "warn"
as_ptr_cast_mut = "warn"
cast_ptr_alignment = "warn"
float_cmp = "warn"
indexing_slicing = "warn"
arithmetic_side_effects = "warn"
integer_division = "warn"
modulo_arithmetic = "warn"
expect_used = "warn"

# Security anti-patterns
# allow_attributes = "warn" # I think we need them for test and benchmarks
dbg_macro = "warn"
print_stdout = "warn" # Allowed per-use only with a specific annotation and justification
# print_stderr = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
panic = "deny"          # DON'T PANIC IN PRODUCTION (it would be forbidden, but it breaks clap for some reason, so just don't do it)
unwrap_used = "deny"      # DON'T UNWRAP IN PRODUCTION
exhaustive_enums = "warn"

# Performance and correctness
perf = { level = "warn", priority = -1 }
await_holding_lock = "deny"
clone_on_ref_ptr = "warn"
create_dir = "warn"
exit = "warn"
filetype_is_file = "warn"
float_equality_without_abs = "warn"
if_then_some_else_none = "warn"
# invalid_from_utf8_unchecked = "warn"  # Not available in clippy
large_stack_arrays = "warn"
let_underscore_must_use = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
match_same_arms = "warn"
missing_assert_message = "warn"
missing_docs_in_private_items = "allow"
mixed_read_write_in_expression = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
non_ascii_literal = "warn"
non_send_fields_in_send_ty = "warn"
partial_pub_fields = "warn"
pattern_type_mismatch = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
ref_binding_to_reference = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
semicolon_inside_block = "warn"
semicolon_outside_block = "warn"
shadow_reuse = "warn"
shadow_same = "warn"
shadow_unrelated = "warn"
str_to_string = "warn"
string_add = "warn"
string_add_assign = "warn"
string_lit_as_bytes = "warn"
string_slice = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
undocumented_unsafe_blocks = "deny" # We should not have unsafe code in this project, but if we do, we should document it
unnecessary_self_imports = "warn"
unseparated_literal_suffix = "warn"
unused_async = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_debug = "warn"
verbose_file_reads = "warn"
wildcard_enum_match_arm = "warn"
zero_sized_map_values = "warn"

# Allow specific lints that are too noisy for this project; each of these will get set to warn/deny at some point
missing_errors_doc = "allow"
missing_panics_doc = "allow"       # TODO: Revisit this
must_use_candidate = "allow"       # TODO: Revisit this
cast_possible_truncation = "allow" # TODO: Revisit this
cast_precision_loss = "allow"      # TODO: Revisit this
cast_sign_loss = "allow"           # TODO: Revisit this
module_name_repetitions = "allow"  # TODO: Revisit this
similar_names = "allow"            # TODO: Revisit this
too_many_lines = "allow"           # TODO: Revisit this
type_complexity = "allow"          # TODO: Revisit this
async_yields_async = "allow"       # TODO: Revisit this
large_futures = "allow"            # TODO: Revisit this
result_large_err = "allow"         # TODO: Revisit this
cargo_common_metadata = "allow"    # TODO: Revisit this
multiple_crate_versions = "allow"

[features]
default = ["anthropic", "openai", "compression-typescript"]

# LLM Providers
anthropic = []
openai = []
ollama = []
openrouter = []
xai = []
groq = []
gemini = []
all-providers = [
    "anthropic",
    "openai",
    "ollama",
    "openrouter",
    "xai",
    "groq",
    "gemini",
]

# Compression languages
compression-typescript = ["tree-sitter-typescript"]
compression-python = ["tree-sitter-python"]
compression-rust = ["tree-sitter-rust"]
compression-go = ["tree-sitter-go"]
compression-all = [
    "compression-typescript",
    "compression-python",
    "compression-rust",
    "compression-go",
]

[dependencies]
anyhow      = "1.0.101"
async-trait = "0.1.89"
chrono      = { version = "0.4.43", features = [ "serde" ] }
# CLI
clap = { version = "4.5.58", features = [ "derive", "env" ] }

# Configuration
config  = { version = "0.15.19", features = [ "toml" ] }
console = "0.16.2"
dialoguer = "0.12.0"

# Misc
dirs    = "6.0.0"
futures = "0.3.32"

# Git operations
git2    = "0.20.4"
globset = "0.4.18"

# File matching
ignore = "0.4.25"

# Progress display
indicatif = "0.18.4"
once_cell = "1.21.3"
quick-xml = "0.39.1"
regex     = "1.12.3"

# LLM providers (feature-gated)
# Alternative: individual provider SDKs
reqwest = { version = "0.13.2", features = [ "json", "stream" ] }

# Serialization
serde      = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.149"

# Error handling
thiserror = "2.0.18"

# Token counting
tiktoken-rs = "0.9.1"

# Async runtime
tokio = { version = "1.49.0", features = [ "full" ] }
toml  = "1.0.1"

# Logging
tracing            = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [ "env-filter" ] }

# Tree-sitter (feature-gated per language)
# ABI Version Compatibility:
# - tree-sitter 0.26.x supports ABI versions 13-15 (backwards-compatible, not forwards-compatible)
# - The core library can use parsers with older ABI versions, but not newer ones
# - All language parsers should ideally use the same ABI version to avoid potential issues
#
# Current Status (MIXED ABI VERSIONS):
# - tree-sitter 0.26.3: ABI v15 (latest) ✓
# - tree-sitter-go 0.25.0: ABI v15 ✓ (latest available)
# - tree-sitter-python 0.25.0: ABI v15 ✓ (latest available)
# - tree-sitter-rust 0.24.0: ABI v15 ✓ (latest available)
# - tree-sitter-typescript 0.23.2: ABI v14 ⚠️ (latest available, compatible but older ABI)
#
# Note: Language parsers haven't released 0.26.x versions yet, but they're compatible
# with tree-sitter 0.26.3 due to backward compatibility support.
tree-sitter            = "0.26.5"
tree-sitter-go         = { version = "0.25.0", optional = true }
tree-sitter-python     = { version = "0.25.0", optional = true }
tree-sitter-rust       = { version = "0.24.0", optional = true }
tree-sitter-typescript = { version = "0.23.2", optional = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = [ "html_reports" ] }
git-cliff = "2.12.0"
insta     = "1.46"
mockito   = "1.7"
tempfile  = "3.25.0"
typos     = "0.10.41"

[[bench]]
name    = "benchmark"
harness = false

[lints.rust]
# Use "deny" instead of "forbid" to allow `#[allow(unsafe_code)]` in tests
# that need to use `std::env::set_var` (unsafe in Rust 2024 edition due to data races)
unsafe_code = "deny"

[profile.release]
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
